# dir2md

./: LICENSE  README.md  directory_snapshot.md  pyproject.toml
src/dir2md/: cli.py
